syntax = "proto3";
package pb;
option go_package = ".;";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

service EventService {
  rpc GetEvent(GetEventRequest) returns (GetEventResponse) {}
  rpc SetEvent(SetEventRequest) returns (SetEventResponse) {}
  rpc GetEvents(google.protobuf.Empty) returns (GetEventsResponse) {}
}

message Event {
  string id = 1;
  string name = 2;
  string description = 3;
  google.protobuf.Timestamp time = 4;
}

message GetEventRequest { Event e = 1; }

message GetEventResponse { Event e = 1; }

message SetEventRequest { Event e = 1; }

message SetEventResponse { bool ok = 1; }

message GetEventsResponse { repeated Event e = 1; }
